# thud-and-tile

./: .gitignore  AGENTS.md  CLI_WASM_INTEGRATION_REDESIGN.md  CONTEXT_RECOVERY_PROMPT.md  CURRENT_STATUS.md  Cargo.toml  FINAL_COMPLETION_REPORT.md  HANDOVER_PHASE2A.md  HISTORY.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_PHASE2_COMPLETION.md  MIGRATION_RISK_COMPREHENSIVE_ANALYSIS.md  PHASE1_CORE_MODULE_COMPATIBILITY.md  PHASE2A_COMPLETION.md  PHASE2A_CONTEXT_LOSS_ANALYSIS.md  PHASE2A_DECISION_ANALYSIS.md  PHASE2A_IMPLEMENTATION_LOG.md  PHASE2A_LEARNING_LOG.md  PHASE2B_CONTEXT_RECOVERY.md  PHASE2B_LEARNING_LOG.md  PHASE2B_NEXT_STEPS.md  PHASE2C_CONTEXT_RECOVERY.md  PHASE2C_LEARNING_LOG.md  PHASE2_CLI_MIGRATION_STRATEGY.md  PHASE2_LAYER_SEPARATION_DESIGN.md  PHASE2_MIGRATION_RISK_ANALYSIS.md  PHASE2_PLAN_REVISION.md  PHASE3_CONSIDERATIONS.md  PHASE3_WASM_BOUNDARY_REDESIGN.md  PHASE4_INTEGRATION_PLAN_REBUILT.md  PROJECT_STATUS.md  QUICKSTART_PHASE2A.md  README.md  ROADMAP.md  UNIFIED_ARCHITECTURE_RETROSPECTIVE.md  WASM_API_LAYER_DESIGN.md  WASM_CORE_INTEGRATION_PLAN.md  WASM_CORE_INTEGRATION_TECHNICAL.md  WASM_REDESIGN_PHASE_ANALYSIS.md  commit_message.txt  (+16 more)
docs/: buggy-ss.txt  buggy-ss3.txt  push_down_animation_bug.md
notes/: web_chain_bonus_memo.md
obsolete_docs/: CLI_WASM_UNIFIED_ARCHITECTURE.md  GRADUAL_MIGRATION_PLAN.md  PHASE3_CONSIDERATIONS.md  README.md  WASM_CORE_INTEGRATION_PLAN_OLD.md  animation_integration_report.md  run_tests.sh  shape_rotation.txt  srs_tdd_plan.md
src/: animation.rs  board_logic.rs  cell.rs  cli_bridge.rs  cli_game_engine.rs  cli_unified.rs  config.rs  game_color.rs  game_core.rs  game_input.rs  lib.rs  main.rs  main_phase2a.rs  random.rs  (+14 more)
(+38 files in other folders)
