[package]
name = "thud-and-tile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Performance",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
