[package]
name = "thud-and-tile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Native環境のみでbinターゲットを有効化
[[bin]]
name = "thud-and-tile"
path = "src/main.rs"
required-features = ["native-bin"]

[dependencies]
rand = "0.8.5"
lazy_static = "1.4.0"

# WASM専用の依存関係をOptionalにしてnativeテストを可能にする
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Performance",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-test = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["native-bin"]
native-bin = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]
wasm-test = ["wasm", "wasm-bindgen-test"]
nodejs-test = ["wasm-bindgen", "js-sys", "wasm-bindgen-test"]
